--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Nima gap</h1>
     <h4>Hi</h4>
+    <h6>My name is Joxa</h6>
     <script src="./js/main.js"></script>
   </body>
 </html>
